# mcp-weather-sse

./: readme.md  requirements.txt
docs/: sse_and_starlette_learnings.md
scripts/: install_deps.bat  launch.bat  setup.bat
src/: pyproject.toml
src/mcp_weather_service/: __init__.py  weather_server.py
test/: inspect.bat
